<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Codelearn LiftApp</string>
    <string name="liftapp_title">CodeLearn LiftApp</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_phn">Phone number:</string>
    <string name="lbl_enter_phn">Enter phone number</string>
    <string name="title_activity_create_carpool">CreateCarpoolActivity</string>
    <string name="title_activity_carpool_detail">CarpoolDetailActivity</string>
    <string name="lbl_location">Location:</string>
    <string name="lbl_enter_location">Enter home location</string>
    <string name="lbl_stime">Start from home:</string>
    <string name="lbl_etime">Start from office:</string>
    <string name="lbl_create">Create carpool</string>
    <string name="lbl_edit">Edit carpool</string>
    <string name="lbl_delete">Delete carpool</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_message">Message</string>
    <string name="title_activity_carpool_list">CarpoolListActivity</string>
    <string name="title_activity_carpool_detail_activty">CarpoolDetailActivty</string>
    <string name="hello_world">Hello world!</string>

</resources>
