<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/Scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/LLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/phn_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/phn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:text="@string/lbl_phn" />

                <EditText
                    android:id="@+id/fld_phn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:hint="@string/lbl_enter_phn"
                    android:inputType="textPhonetic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:text="@string/lbl_location" />

                <EditText
                    android:id="@+id/fld_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:hint="@string/lbl_enter_location"
                    android:inputType="textPhonetic" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#666666" />

            <LinearLayout
                android:id="@+id/stime_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/stime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="20"
                    android:text="@string/lbl_stime" />

                <TimePicker
                    android:id="@+id/fld_stime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#666666" />

            <LinearLayout
                android:id="@+id/etime_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/etime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="20"
                    android:text="@string/lbl_etime" />

                <TimePicker
                    android:id="@+id/fld_etime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#666666" />

            <Button
                android:id="@+id/carpool_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_create" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>