<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#b2b2b2"
       android:gravity="center"
       android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_location" />

        <TextView
            android:id="@+id/cp_location"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView1"
            />

        <TextView
            android:id="@+id/textView3"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:text="@string/lbl_stime"/>
       
         <TextView
            android:id="@+id/cp_stime"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cp_location"
            android:layout_toRightOf="@+id/textView3"
            />
        <TextView
            android:id="@+id/textView5"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:text="@string/lbl_etime"/>
         <TextView
            android:id="@+id/cp_etime"
             android:textSize="20sp"
             android:layout_below="@id/cp_stime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView5"
            />
        <TextView
            android:id="@+id/textView7"
             android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:text="@string/lbl_phn"/>
         <TextView
            android:id="@+id/cp_phn"
             android:textSize="20sp"
             android:layout_below="@id/cp_etime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:layout_toRightOf="@+id/textView7"
            />
    </RelativeLayout>


  </LinearLayout>